# oxitrmnl

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  flake.nix  openapi-generator-config.yaml  openapi.json
.sqlx/: query-399d6fd978424d065304f7bfe50090da0b326084805656c02bb634eaa290fca5.json  query-86f35c0b99f9ea63a6db3cf1f7143a263ac56fb2ab61321ee0ae1b62b120a0ec.json
migrations/sqlite/: 20250724134315_create_devices_table.up.sql  V1__create_devices.sql
nix/parts/: devshell.nix  git-hooks.nix
openapi/: Cargo.toml  README.md
openapi/src/: types.rs
openapi/src/server/: mod.rs
src/lib/: config.rs  lib.rs
src/lib/domain/device/: ports.rs  service.rs
src/lib/domain/device/models/: device.rs
src/lib/inbound/: http.rs
src/lib/openapi/: Cargo.toml  README.md
src/lib/openapi/src/: lib.rs  models.rs
src/lib/openapi/src/apis/: default.rs
src/lib/outbound/: sqlite.rs
tests/e2e/: setup.hurl
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.svelte  main.js
web/src/lib/: Accordion.svelte
