[package]
name = "oxitrmnl"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11.8"
log = "0.4.27"
refinery = { version = "0.8.16", features = ["rusqlite"] }
rusqlite = "0.33.0"
tokio = { version = "1.45.0", features = ["macros", "rt", "rt-multi-thread"] }
utoipa = "5"
openapi = { path = "openapi"}

[lib]
name = "oxitrmnl"
path = "src/lib/lib.rs"

[[bin]]
name = "server"
path = "src/bin/server/main.rs"
