[package]
name = "oxitrmnl"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11.8"
log = "0.4.27"
tokio = { version = "1.45.0", features = ["macros", "rt", "rt-multi-thread"] }
utoipa = "5"
oxitrmnl-openapi = { path = "openapi"}
axum = "0.8.4"
axum-extra = { version = "0.10.1", features = ["cookie", "query"] }
async-trait = "0.1.88"
rand = "0.9.2"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio", "migrate"] }

[lib]
name = "oxitrmnl"
path = "src/lib/lib.rs"

[[bin]]
name = "server"
path = "src/bin/server/main.rs"
